@@ -36,7 +36,7 @@ class modShopmodxOrdersUpdatefromgridProcessor extends modShopmodxOrdersUpdatePr
         return parent::afterSave();
     }
     
-    public function cleanup() {
+    public function cleanup($msg = '') {
         
         $processor = new modShopmodxOrdersGetlistProcessor($this->modx, array(
             'grid' => 0,
