@@ -1,3 +1,9 @@
+shopModx-2.1.1-beta
+========================================
+- Added empty basket processor
+- Minor bugfix
+
+
 shopModx-2.1.0-beta
 ========================================
 - Added payment processor
